--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["cryptography"]
 keywords = ["SPIFFE", "X509", "JWT"]
 
 [dependencies]
+cmake = "=0.1.45"
 protobuf = "2.24.1"
 futures = "0.3.15"
 thiserror = "1.0.25"
